finish base layout in html and css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,87 @@
 	<title></title>
 </head>
 <body>
-
+<main>
+	<div class="hex-row">
+		<div class="empty">
+			<div class="left"></div>
+			<div class="middle"></div>
+			<div class="right"></div>
+		</div>
+		<div class="hex even">
+			<div class="left"></div>
+			<div class="middle"></div>
+			<div class="right"></div>
+		</div>
+	</div>
+	<div class="hex-row">
+		<div class="hex">
+			<div class="left"></div>
+			<div class="middle">19</div>
+			<div class="right"></div>
+		</div>
+		<div class="hex even">
+			<div class="left"></div>
+			<div class="middle"></div>
+			<div class="right"></div>
+		</div>
+		<div class="hex">
+			<div class="left"></div>
+			<div class="middle"></div>
+			<div class="right"></div>
+		</div>
+	</div>
+	<div class="hex-row">
+		<div class="hex">
+			<div class="left"></div>
+			<div class="middle"></div>
+			<div class="right"></div>
+		</div>
+		<div class="hex even">
+			<div class="left"></div>
+			<div class="middle"></div>
+			<div class="right"></div>
+		</div>
+		<div class="hex">
+			<div class="left"></div>
+			<div class="middle"></div>
+			<div class="right"></div>
+		</div>
+	</div>
+	<div class="hex-row">
+		<div class="hex">
+			<div class="left"></div>
+			<div class="middle"></div>
+			<div class="right"></div>
+		</div>
+		<div class="hex even">
+			<div class="left"></div>
+			<div class="middle"></div>
+			<div class="right"></div>
+		</div>
+		<div class="hex">
+			<div class="left"></div>
+			<div class="middle"></div>
+			<div class="right"></div>
+		</div>
+	</div>
+	<div class="hex-row">
+		<div class="hex">
+			<div class="left"></div>
+			<div class="middle"></div>
+			<div class="right"></div>
+		</div>
+		<div class="hex even">
+			<div class="left"></div>
+			<div class="middle"></div>
+			<div class="right"></div>
+		</div>
+		<div class="hex">
+			<div class="left"></div>
+			<div class="middle"></div>
+			<div class="right"></div>
+		</div>
+	</div>
+</main>
 </body>
 </html>
