--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
 	<meta charset="utf-8">
   	<link rel="stylesheet" href="stylesheet/css/style.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+  	<script src="js/jquery-ui.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<title></title>
 </head>
 <body>
-<main>
+<div>
+	<div class="hex colorA" id="drag">
+		<div class="left"></div>
+		<div class="middle">19</div>
+		<div class="right"></div>
+	</div>
+</div>
+<main class="drop">
 	<div class="hex-row">
 		<div class="empty">
 			<div class="left"></div>
