done dragdrop function

--- a/index.html
+++ b/index.html
@@ -9,91 +9,84 @@
 	<title></title>
 </head>
 <body>
-<div>
-	<div class="hex colorA" id="drag">
-		<div class="left"></div>
-		<div class="middle">19</div>
-		<div class="right"></div>
-	</div>
-</div>
-<main class="drop">
+<main>
 	<div class="hex-row">
 		<div class="empty">
 			<div class="left"></div>
 			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
-		<div class="hex even">
+		<div class="hex even" id="1">
 			<div class="left"></div>
-			<div class="middle"></div>
+			<div class="middle">1</div>
 			<div class="right"></div>
 		</div>
 	</div>
 	<div class="hex-row">
-		<div class="hex">
+		<div class="hex" id="2">
 			<div class="left"></div>
-			<div class="middle">19</div>
+			<div class="middle">2</div>
 			<div class="right"></div>
 		</div>
-		<div class="hex even">
+		<div class="hex even" id="3">
 			<div class="left"></div>
-			<div class="middle"></div>
+			<div class="middle">3</div>
 			<div class="right"></div>
 		</div>
-		<div class="hex">
+		<div class="hex" id="4">
 			<div class="left"></div>
-			<div class="middle"></div>
-			<div class="right"></div>
-		</div>
-	</div>
-	<div class="hex-row">
-		<div class="hex">
-			<div class="left"></div>
-			<div class="middle"></div>
-			<div class="right"></div>
-		</div>
-		<div class="hex even">
-			<div class="left"></div>
-			<div class="middle"></div>
-			<div class="right"></div>
-		</div>
-		<div class="hex">
-			<div class="left"></div>
-			<div class="middle"></div>
+			<div class="middle">4</div>
 			<div class="right"></div>
 		</div>
 	</div>
 	<div class="hex-row">
-		<div class="hex">
+		<div class="hex" id="5">
 			<div class="left"></div>
-			<div class="middle"></div>
+			<div class="middle">5</div>
 			<div class="right"></div>
 		</div>
-		<div class="hex even">
+		<div class="hex even" id="6">
 			<div class="left"></div>
-			<div class="middle"></div>
+			<div class="middle">6</div>
 			<div class="right"></div>
 		</div>
-		<div class="hex">
+		<div class="hex" id="7">
 			<div class="left"></div>
-			<div class="middle"></div>
+			<div class="middle">7</div>
 			<div class="right"></div>
 		</div>
 	</div>
 	<div class="hex-row">
-		<div class="hex">
+		<div class="hex" id="8">
 			<div class="left"></div>
-			<div class="middle"></div>
+			<div class="middle">8</div>
 			<div class="right"></div>
 		</div>
-		<div class="hex even">
+		<div class="hex even" id="9">
 			<div class="left"></div>
-			<div class="middle"></div>
+			<div class="middle">9</div>
 			<div class="right"></div>
 		</div>
-		<div class="hex">
+		<div class="hex" id="10">
 			<div class="left"></div>
-			<div class="middle"></div>
+			<div class="middle">10</div>
+			<div class="right"></div>
+		</div>
+	</div>
+	<div class="hex-row">
+		<div class="hex" id="11">
+			<div class="left"></div>
+			<div class="middle">11</div>
+			<div class="right"></div>
+		</div>
+		<div class="hex even" id="12">
+			<div class="left"></div>
+			<div class="middle">12</div>
+			<div class="right"></div>
+		</div>
+		<div class="hex" id="13">
+			<div class="left"></div>
+			<div class="middle">13</div>
 			<div class="right"></div>
 		</div>
 	</div>
