--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
   	<link rel="stylesheet" href="stylesheet/css/style.css">
+  	<link href='https://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'>
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   	<script src="js/jquery-ui.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
@@ -18,75 +19,75 @@
 		</div>
 		<div class="hex even" id="1">
 			<div class="left"></div>
-			<div class="middle">1</div>
+			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
 	</div>
 	<div class="hex-row">
 		<div class="hex" id="2">
 			<div class="left"></div>
-			<div class="middle">2</div>
+			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
 		<div class="hex even" id="3">
 			<div class="left"></div>
-			<div class="middle">3</div>
+			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
 		<div class="hex" id="4">
 			<div class="left"></div>
-			<div class="middle">4</div>
+			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
 	</div>
 	<div class="hex-row">
 		<div class="hex" id="5">
 			<div class="left"></div>
-			<div class="middle">5</div>
+			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
 		<div class="hex even" id="6">
 			<div class="left"></div>
-			<div class="middle">6</div>
+			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
 		<div class="hex" id="7">
 			<div class="left"></div>
-			<div class="middle">7</div>
+			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
 	</div>
 	<div class="hex-row">
 		<div class="hex" id="8">
 			<div class="left"></div>
-			<div class="middle">8</div>
+			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
 		<div class="hex even" id="9">
 			<div class="left"></div>
-			<div class="middle">9</div>
+			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
 		<div class="hex" id="10">
 			<div class="left"></div>
-			<div class="middle">10</div>
+			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
 	</div>
 	<div class="hex-row">
 		<div class="hex" id="11">
 			<div class="left"></div>
-			<div class="middle">11</div>
+			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
 		<div class="hex even" id="12">
 			<div class="left"></div>
-			<div class="middle">12</div>
+			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
 		<div class="hex" id="13">
 			<div class="left"></div>
-			<div class="middle">13</div>
+			<div class="middle"></div>
 			<div class="right"></div>
 		</div>
 	</div>
