--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   	<link rel="stylesheet" href="stylesheet/css/style.css">
   	<link href='https://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'>
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+  	<script src="js/jquery.ui.touch-punch.js"></script>
   	<script src="js/jquery-ui.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<title></title>
